2007-07-03  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Scheduler Types): correct the description
	of Dependent schedulers. Thanks to Greg Ward for the patch.

	* buildbot/steps/source.py (SVN.startVC): when applying a patch,
	add "[patch]" to the step's display. Thanks to Dustin Mitchell for
	the patch. Closes #49.

	* buildbot/slave/commands.py (rmdirRecursive): chmod everything to
	0700 before removing it, to deal with situations where a build will
	leave files around without write permissions and the 'copy' or
	'clobber' VC checkout modes need to blow away the tree first.
	Thanks to Steve Milner for the suggestion and the patch (which I
	mangled horribly). Closes #29.
	* buildbot/test/test_slavecommand.py (Utilities.test_rmdirRecursive):
	test for it

	* buildbot/test/runutils.py (RunMixin.disappearSlave): oops, add
	an allowReconnect= argument to let callers control whether they
	want this don't-let-it-reconnect behavior, since some tests care.
	Factor out the .continueTrying=False lines from those callers.
	* buildbot/test/test_slaves.py: same
	* buildbot/test/test_run.py: same

2007-07-02  Brian Warner  <warner@lothar.com>

	* buildbot/test/runutils.py (RunMixin.disappearSlave): once a
	slave has been disappeared, don't let it reconnect. This was
	causing an intermittent failure in test_slaves.py, when the slave
	that was supposed to be gone managed to come back by the end of
	the test and affect the count.
	* buildbot/test/test_slaves.py (Slave.testFallback2): minor
	refactorings
	* buildbot/process/builder.py (SlaveBuilder.__repr__): added some
	diagnostic messages to track down this problem
	(Builder.startBuild): same

	* buildbot/process/builder.py (Builder.maybeStartBuild): choose
	the slave randomly rather than always taking the first one. Thanks
	to Pike for the patch. Closes #36.
	* buildbot/test/test_slaves.py: match the change. to avoid huge
	changes to the tests, I added a CHOOSE_SLAVES_RANDOMLY flag which